--- a/src/components/CourseGoals/CourseInput/CourseInput.module.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.module.css
@@ -25,7 +25,7 @@
 
 .form-control.invalid input {
   border-color: red;
-  background: #fad0ec;
+  background: #ffd7d7;
 }
 
 .form-control.invalid label {
